src/style/components/_modal.scss
$modal-standard-width: 620px;
$modal-box-shadow: 0 4px 10px 0 rgba(36, 49, 56, 0.15);
$modal-border-radius: 0.3rem;

.modal-backdrop.in {
  opacity: .7;
}
.modal-backdrop.show {
  opacity: .85;
}
.modal {
  display: flex !important;
  justify-content: center;
  flex-direction: column;
}
.modal-content {
  max-width: $modal-standard-width;
  margin: 0 auto;
  box-shadow: $modal-box-shadow;
  border: 0;
  background-color: $white;
  h2,p {
    color: $blue-grey-1;
  }
  .modal-close {
    @include square(30px);
    cursor: pointer;
    position: absolute;
    right: 10px;
    top: 10px;
    z-index: 99;
    text-align: left;
    mat-icon {
      height: 15px;
      line-height: $line-height-xl;
      ::ng-deep path {
        fill: $blue-grey-4;
      }
    }
    &:hover mat-icon ::ng-deep path {
      fill: $blue-grey-1;
    }
    &.light {
      mat-icon ::ng-deep path {
        fill: $white;
        opacity: .5;
      }
    }
    &.grey {
      mat-icon ::ng-deep path {
        fill: $blue-grey-4;
      }
    }
  }
  .modal-back {
    cursor: pointer;
    position: absolute;
    top: 20px;
    left: 20px;
    z-index: 99;
  }
  .center-heading {
    text-align: center;
    h2 {
      font-size: $font-size-l;
      color: $blue-grey-1;
    }
  }
  .modal-body, .modal-footer {
    padding: $spacing-ml;
  }
  .modal-footer {
    padding-top: 0;
    border-top: 0;
    &.centered {
      text-align: center;
    }
  }
  h2 {
    font-weight: $font-weight-chunky;
    font-size: $font-size-m;
    margin-bottom: 0;
    line-height: $line-height-ml;
  }
  p {
    margin-top: $spacing-m;
    margin-bottom: 0;
    font-size: $font-size-s;
  }
  .btn:not(.btn-primary):not(.btn-secondary):not(.btn-feature):not(.btn-gray):not(.custom-radio):not(.btn-text):not(.simple.light) {
    color: $blue-grey-1;
    background-color: transparent;
    outline: 0;
    border-left: 1px solid $blue-grey-4;
    padding: 0 $spacing-ml;
    border-radius: 0;
    &:first-child {
      border-left: 0;
    }
    &.btn-warn {
      color: $negative-main;
    }
    &.btn-danger {
      background-color: $warn !important;
      color: $white !important;
      &:hover {
        background-color: $warn !important;
        opacity: 0.9;
      }
    }
  }

  .btn-corporate {
    background-color: $walla-main;
    color: $white;
    line-height: $line-height-xxl;
    min-width: 140px;
    transition: background-color .25s ease;
    &:hover {
      background-color: darken($walla-main, 5%);
    }
  }
}

.modal.report {
  $modal-width: 480px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
    @include media-breakpoint-down(sm) {
      width: 100% !important;
    }
  }
}

.modal.review, .modal.sold, .modal.profile {
  $modal-width: 600px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    border-radius: $border-radius;
    width: $modal-width !important;
    max-width: unset;
    @include media-breakpoint-down(sm) {
      width: 100% !important;
    }
  }
}

.modal.credit-card {
  $modal-width: 370px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
  }
}

.modal.preview, .modal.location  {
  $modal-width: 700px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
    overflow: hidden;
    @include media-breakpoint-down(sm) {
      width: 100% !important;
    }
  }
}

.modal.account-details {
  $modal-width: 600px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width;
    max-width: unset;
  }
}

.modal.unsubscribe {
  $modal-width: 600px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
  }
}

.modal.visibility-products {
  $modal-width: 1090px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
    background-color: rgba($blue-grey-1, .95);
  }
}

.modal.buy-wallacoins, .modal.buy-product, .modal.reactivate, .modal.tutorial-wallacoins, .modal.become-pro {
  .modal-dialog {
    max-width: unset;
  }
  .modal-content {
    max-width: unset;
    overflow: hidden;
  }
}

.modal.confirm-wallacoins {
  $modal-width: 654px;
  .modal-dialog {
    max-width: $modal-width;
  }
  .modal-content {
    width: $modal-width !important;
    max-width: unset;
  }
}

.modal.phone-request {
  $modal-width: 572px;
  .modal-body {
    border-radius: 20px;
    padding: $spacing-ms $spacing-xxl $spacing-l;
  }
  .modal-dialog, .modal-content {
    max-width: $modal-width;
    border-radius: $button-border-radius;
  }
  .modal-close {
    left: 18px;
    top: 18px;
    mat-icon {
      @include square(18px);
    }
  }
}

.modal.modal-prompt {
  .modal-dialog {
    max-width: $modal-standard-width;
  }
  .modal-content {
    width: $modal-standard-width !important;
    max-width: unset;
    .modal-body {
      text-align: center;
      margin-top: $spacing-xxl;
      h2 {
        font-size: $font-size-l;
      }
      p {
        font-size: $font-size-m;
        color: $blue-grey-2;
      }
    }
    .modal-footer {
      justify-content: center;
      padding-bottom: $spacing-xxl;
      .btn {
        width: 170px;
        height: 40px;
        line-height: 40px;
        background-color: $blue-grey-5 !important;
        color: $blue-grey-2 !important;
        border: 0 !important;
        border-radius: 20px !important;
        &.btn-warn {
          background-color: $warn !important;
          color: $white !important;;
        }
        &:hover {
          opacity: .8;
        }
      }
    }
    @include media-breakpoint-down(sm) {
      width: 100% !important;
    }
  }
}

.modal.modal-standard {
  .modal-dialog {
    max-width: $modal-standard-width;
  }
  .header {
    background: $walla-main;
    height: 100px;
    border-top-left-radius: $modal-border-radius;
    border-top-right-radius: $modal-border-radius;
    color: $white;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    .modal-close {
      top: 20px;
      right: 20px;
      @include square(13px);
      mat-icon {
        @include square(13px);
        line-height: unset;
      }
    }
    h1 {
      font-size: $font-size-l;
      font-weight: $font-weight-chunky;
    }
    p {
      opacity: .8;
      margin: 0;
      color: $white;
      font-size: $font-size-m;
    }
  }
  .modal-content {
    width: $modal-standard-width !important;
    max-width: unset;
    .modal-close:not(.light) {
      mat-icon ::ng-deep path {
        fill: $blue-grey-3;
      }
    }
    .image-col {
      background-color: $blue-grey-4;
      min-width: 280px;
      border-top-left-radius: $modal-border-radius;
      border-bottom-left-radius: $modal-border-radius;
      display: flex;
      justify-content: center;
      img {
        width: 200px;
        margin: 0;
      }
    }
    .modal-title {
      font-weight: $font-weight-chunky;
      font-size: $font-size-l;
      margin-bottom: $spacing-ms;
      &.fail {
        color: $warn;
      }
    }
    .modal-text {
      font-size: $font-size-m;
      color: $blue-grey-2;
      &.green {
        color: $walla-main;
      }
    }
    .link {
      color: $blue-grey-3 !important;
      margin-top: $spacing-m;
      &:hover {
        text-decoration: underline;
        cursor: pointer;
      }
    }
    .share {
      text-align: center;
      font-size: $font-size-m;
      color: $blue-grey-3;
      .social-icons {
        display: flex;
        justify-content: center;
        margin-bottom: $spacing-ml;
        a {
          display: flex;
          justify-content: center;
          align-items: center;
          border-radius: 50%;
          background-color: $blue-grey-5;
          @include square(34px);
          margin: 6px;
          cursor: pointer;
          mat-icon {
            @include square(18px);
            ::ng-deep path {
              fill: $blue-grey-3;
            }
          }
          &:hover {
            background-color: $color-social-background;
            mat-icon ::ng-deep path {
              fill: $color-social-fill;
            }
          }
        }
      }
    }
  }
}

@include media-breakpoint-down(sm) {
  .modal-dialog {
    max-height: calc(100% - #{$spacing-xxl});
  }
  .modal-content {
    height: 100%;
    width: 100% !important;
    overflow: auto !important;
  }
  .modal-body {
    width: 100% !important;
  }
}

